--- a/src/main/webapp/xhtml/login/login.xhtml
+++ b/src/main/webapp/xhtml/login/login.xhtml
@@ -24,7 +24,7 @@
 					</tr>
 					<tr>
 						<td><h:outputText value="Password:" /></td>
-						<td><p:inputText size="20"
+						<td><p:password size="20"
 							value="#{loginBean.password}" /></td>
 					</tr>
 					
