--- a/src/main/webapp/xhtml/common/leftPane.xhtml
+++ b/src/main/webapp/xhtml/common/leftPane.xhtml
@@ -8,6 +8,22 @@
 <table>
 <tr><td><img src="../../images/BlankProfile.gif" height="200" width="200" /></td></tr>
 
+
+
+<tr>
+<td>
+<br />
+<h:outputText value="Also Here..." style="font-weight:bold;" />
+<br />
+</td>
+</tr>
+<ui:repeat var="user" value="#{timelineBean.allUsers}">
+<tr>
+<td style="align: center"><h:outputText value="#{user.personalDetail.name}" /></td>
+</tr>
+								
+</ui:repeat>
+
 </table>
 </p:panel>
 </ui:composition>
